Increase the UI paint timeout to 5 seconds.

This fixes the first browser window appearing blank for a moment. In
general, it's better to block than to show the UI in an inconsistent
state. Web content should *not* wait this long.

Bug: 849762
Change-Id: I2b73e52a0425ee6fa583fcddc0300dc8a2d3ad73
Reviewed-on: https://chromium-review.googlesource.com/1135119
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: ccameron <ccameron@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574731}
Former-commit-id: 51181f475ceacf8bc0c9c09e5808f9eb7be04a2e